  Features:
    - Added settings for configuring how item values propagate throughout recipes, namely raw item values and planet-specific scaling rates.
    - The /export-item-values command now also includes item value sources and recipe data for use with the Hextorio Item Value Explorer (HIVE) web tool.
  Minor Features:
    - Added the has_untradable_items field to trades in the trades JSON export, which indicates whether the trade contains any items that are initially untradable on its planet (only set to true for trades created by the silver item rank bonus).
  Changes:
    - The is_interplanetary field in trades in the trades JSON export now corresponds to whether the trade contains any items that can only be obtained after importing at least one item from another planet.
    - Overhauled the system that determines which items are initially tradable on each planet.
        It used to be based on whether items were considered "interplanetary", but it is now based on which recipes are usable on each planet and when/where they're unlocked.
  Balancing:
    - Rebalanced item values to be less about a planet's stage in the game progression but instead more about actual difficulty of obtainment.
        For example, coal/iron/copper on Vulcanus is now less valuable than on Nauvis, and oil-based products on Fulgora now generally have low values.
    - Item values are now affected by each planet's core challenges:
        Nauvis' items are scaled "normally".
        Vulcanus' items are scaled weakly due to having easy power scaling, plentiful resources, and open building spaces.
        Fulgora's items are scaled strongly due to limited building space and overall complexity of (sustainable) power production.
        Gleba's items are scaled strongly due to item spoilability (requiring special layouts to minimize loss of freshness) and overall complexity of (sustainable) power production.