@@ -65,6 +65,7 @@ value-source-import=Value source: [color=cyan]interplanetary import[.color] __1_
 value-source-unknown=Value source: [color=gray]unknown[.color]
 get-item-value-result=The value of __1__ on __2__ is __3__.
 new-item-value-set=The value of __1__ on __2__ is now __3__.
+new-raw-value-set=__1__ is now a raw resource on __2__ with a value of __3__.\nRun /solve-item-values for the change to take effect.
 removed-value=Removed value for __1__ on __2__.
 removed-all-values=Removed value for [item=__1__] on all planets.
 item-values-imported=Item values successfully imported.
@@ -98,10 +99,10 @@ add-coins=Add coins to your inventory.
 summon=Summon any entity and any number of them at your current character position.
 tp-to-edge=Teleport to the edge of the planet you're on, where you find dungeons.
 simple-trade-loops=Print all possible two-trade loops in the game to a script-output file.
-export-item-values=Write a string to a script-output file.
+export-item-values=Write a string to a script-output file. The file can be uploaded to the open source Hextorio Item Value Explorer (HIVE) web tool.
 import-item-values=Import a string that was generated by /export-item-values, reassigning some values to items.
 get-item-value=See the value of an item on a specific planet. If the item's value is not defined for that planet, it shows the [color=cyan]interplanetary trade[.color] value.
-set-item-value=Assign a new value to an item, allowing it to show up in trades and the catalog.
+set-item-value=Mark an item as a raw resource on a planet with a given base value. Run /solve-item-values afterward for the change to propagate through all recipes.
 remove-item-value=Remove the value of an item, disabling it from showing up in trades and the catalog.
 regenerate-trades=Completely randomize the trades in all hex cores.
 reload-item-buff-effects=Force reset and reapply all current item buffs, preserving their leveling progress.
